--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <main>
       <h1>Congratulations!</h1>
       <h2>You just made your first GitHub deployment.</h2>
+      <p>Asante sana.</p>
     </main>
   </body>
 </html>
